name:                haxl-test-generated-graph
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JustusAdam/haxl-test-generated-graph#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:     Experiment.Haxl.Types
  other-modules:       Experiment.Haxl.Util
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , text

executable haxl-test-generated-graph-exe
  hs-source-dirs:      app
  main-is:             RunTests.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shelly
                     , text
                     , aeson
                     , pcre-light
                     , pcre-heavy
                     , bytestring
                     , haxl-test-generated-graph
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JustusAdam/haxl-test-generated-graph
