name:                inner-app
version:             0.1.0.0
synopsis:            Initial project template from stack
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , SlowLib
  build-depends:       base >= 4.7 && < 5
                     , haxl
                     , hashable
                     , async
  default-language:    Haskell2010

executable inner-app-exe
  hs-source-dirs:      app
                     , generated
  main-is:             Main.hs
  other-modules:       TestGraphs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , inner-app
                     , haxl
                     , bytestring
                     , aeson
                     , time
  default-language:    Haskell2010



-- executable haxl-test-execution-time
--   hs-source-dirs:      app
--                      , generated
--   main-is:             Timed.hs
--   other-modules:       SlowTestGraphs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , haxl-test-generated-graph
--                      , haxl
--                      , bytestring
--                      , aeson
--                      , time
--   default-language:    Haskell2010
